# AI-Drop-out-System

./: .env.example  AUTHENTICATION_SETUP.md  AUTH_CHANGES.md  AUTH_FIX_PERMANENT.md  CODE_CHANGES.md  DASHBOARD_LAYOUT_ARCHITECTURE.md  DASHBOARD_NAVIGATION_MAP.md  ENHANCED_STUDENT_DASHBOARD.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FIX_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETION_REPORT.md  QUICKSTART.md  QUICK_START.txt  RISK_CLASSIFICATION_INTEGRATION.md  RISK_CLASSIFICATION_SYSTEM.md  RISK_CLASSIFICATION_USAGE.md  RISK_EVALUATION_QUICK_REFERENCE.md  RISK_EVALUATION_SYSTEM.md  SETUP_CHECKLIST.md  SETUP_COMPLETE.md  SIGNIN_GUIDE.md  START.bat  START.md  STUDENT_DASHBOARD_QUICK_START.md  STUDENT_PORTAL_COMPLETE_GUIDE.md  TEST_FIXES.md  UPDATES.md  UPLOAD_FORMAT_GUIDE.md  db_check.py  sample_students.csv  sample_upload.csv  test_import.csv  test_upload.csv  test_upload.py  test_upload2.csv
backend/: .env  auth.py  edupulse.db  fix_database.py  main.py  models.py  pyproject.toml  risk_classifier.py  test_risk_classifier.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/alerts/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/export/: page.tsx
frontend/app/forgot-password/: page.tsx
frontend/components/: add-student-modal.tsx  auth-provider.tsx  dashboard.tsx  protected-route.tsx  sidebar.tsx  student-dashboard-widgets.tsx  student-dashboard.tsx  student-detail-panel.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: auth.ts  utils.ts
lib/: risk-classifier.ts
(+13 files in other folders)
